<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_anime_favorites_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?android:attr/selectableItemBackground"
    android:minHeight="146dp"
    android:padding="8dp"
    tools:background="@color/black"
    tools:theme="@style/Theme.Anoti">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/poster_image"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedImageView8percentStyle"
        tools:srcCompat="@drawable/anime_poster_sample" />

    <View
        android:id="@+id/new_episode_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.5"
        android:background="@drawable/rectangle_background_4dp_radius"
        android:backgroundTint="@color/black"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/new_episode_text"
        app:layout_constraintEnd_toEndOf="@id/poster_image"
        app:layout_constraintStart_toStartOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="@id/poster_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/new_episode_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textAppearance="@style/AccentTextAppearance"
        android:textColor="@color/silver"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/poster_image"
        app:layout_constraintStart_toStartOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="@id/poster_image"
        tools:ignore="VisualLintSystemUi"
        tools:text="New episode" />

    <View
        android:id="@+id/image_info_background"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:alpha="0.5"
        android:background="@drawable/rectangle_background_4dp_radius"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/poster_image"
        app:layout_constraintEnd_toEndOf="@id/poster_image"
        app:layout_constraintStart_toStartOf="@id/poster_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/score_image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:alpha="0.8"
        android:src="@drawable/ic_score_42"
        android:tint="@color/cinnabar_500"
        app:layout_constraintBottom_toBottomOf="@id/image_info_background"
        app:layout_constraintEnd_toStartOf="@id/score_text"
        app:layout_constraintStart_toStartOf="@id/image_info_background"
        app:layout_constraintTop_toTopOf="@id/image_info_background"
        tools:contentDescription="The image of the rating in the form of a star" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/image_info_background"
        app:layout_constraintEnd_toStartOf="@id/info_type_button"
        app:layout_constraintStart_toEndOf="@id/score_image"
        app:layout_constraintTop_toTopOf="@id/image_info_background"
        tools:text="8.90" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/info_type_button"
        android:layout_width="42dp"
        android:layout_height="34dp"
        android:background="@color/black"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="4dp"
        android:src="@drawable/ic_details_on_24"
        android:tint="@color/cinnabar_500"
        app:layout_constraintBottom_toBottomOf="@id/image_info_background"
        app:layout_constraintEnd_toEndOf="@id/image_info_background"
        app:layout_constraintStart_toEndOf="@id/score_text"
        app:layout_constraintTop_toTopOf="@id/image_info_background"
        tools:contentDescription="Turn on the display of extra information"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/main_info_stroke"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/rectangle_background_10dp_radius"
        android:backgroundTint="@color/grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/poster_image"
        app:layout_constraintTop_toTopOf="parent"
        tools:backgroundTint="@color/silver" />

    <View
        android:id="@+id/main_info_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="2dp"
        android:background="@drawable/rectangle_background_10dp_radius"
        android:backgroundTint="@color/grey_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/available_episodes_info_text"
        app:layout_constraintEnd_toEndOf="@id/main_info_stroke"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toTopOf="@id/main_info_stroke"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="VisualLintSystemUi"
        tools:text="Attack on Titan: Final. Part 2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/available_episodes_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/release_status_barrier"
        app:layout_constraintEnd_toStartOf="@id/notification_button"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Episodes: 2 / ?" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/release_status_barrier"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:barrierDirection="top"
        app:constraint_referenced_ids="release_status_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/release_status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/green"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/notification_button"
        app:layout_constraintEnd_toStartOf="@id/notification_button"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toTopOf="@id/notification_button"
        tools:text="Ongoing" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/notification_button"
        style="@style/FloatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:alpha="0.8"
        android:tint="@color/black_transparent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="40dp"
        tools:backgroundTint="@color/green"
        tools:contentDescription="Turn off notifications"
        tools:ignore="ContentDescription,ClassNameCheck"
        tools:src="@drawable/ic_notifications_on_40" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/extra_episodes_info_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="2"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/episodes_viewed_number"
        app:layout_constraintEnd_toEndOf="@id/main_info_stroke"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toTopOf="@id/main_info_stroke"
        app:layout_constraintVertical_bias="0"
        tools:text="Next episode:\n 20 feb. 2022" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episodes_viewed_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="3dp"
        android:ellipsize="end"
        android:gravity="start"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/episodes_viewed_minus_button"
        app:layout_constraintEnd_toEndOf="@id/main_info_stroke"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:layout_constraintTop_toBottomOf="@id/extra_episodes_info_text"
        tools:text="Viewed:" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/episodes_viewed_minus_button"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_arrow_left_32"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/main_info_stroke"
        app:layout_constraintEnd_toStartOf="@id/episodes_viewed_number"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/main_info_stroke"
        app:tint="@color/cinnabar_500"
        tools:contentDescription="Minus one episode from the number of viewed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episodes_viewed_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@id/episodes_viewed_minus_button"
        app:layout_constraintEnd_toStartOf="@id/episodes_viewed_plus_button"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/episodes_viewed_minus_button"
        app:layout_constraintTop_toTopOf="@id/episodes_viewed_minus_button"
        tools:text="0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/episodes_viewed_plus_button"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_arrow_right_32"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/main_info_stroke"
        app:layout_constraintEnd_toEndOf="@id/main_info_stroke"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/episodes_viewed_number"
        app:tint="@color/cinnabar_500"
        tools:contentDescription="Plus one episode to the number of viewed" />

</androidx.constraintlayout.widget.ConstraintLayout>
