...
            android:layout_height="match_parent"
            android:layout_margin="64dp"
            tools:contentDescription="Loading in progress"
            tools:src="@drawable/loading_img" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/anime_list_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:listitem="@layout/item_anime_list"
            tools:theme="@style/Theme.Anoti" />

...
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:contentDescription="Filter button in the future" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ongoing_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:elevation="2dp"
                android:ellipsize="end"
                android:gravity="center"
...
