<resources>
    <string name="anime_list">Anime list</string>
    <string name="anime_favorites">Anime favorites</string>
</resources>
